test/configCases/errors/circular-dependency-enhanced/errors.js
"use strict";

module.exports = [
	[
		/There is a circular build dependency/,
		/Circular dependency detected/,
		/Circular dependency chain:/,
		/To fix this circular dependency:/
	]
];

